# animeviz

./: .gitignore  LICENSE.txt  README.md  anime_404.txt  app.py  clean.ipynb  compose.yml  database.py  eda.ipynb  embed.py  franchise.ipynb  franchise_gen.ipynb  franchise_upload.py  mal_setup.md  models.py  pyproject.toml  scraper.py  seeder.py  stella.yml  wsgi.py
recommendations/: anime_store.py  embed.py  engine.py  qdrant_store.py  seeder.py
static/scripts/: form.js  recommendations.js
static/styles/: main.css
templates/: 401.html  404.html  base.html  index.html  login.html  recommendations.html  visualize.html
visualizer/: api_helper.py  helpers.py  visualizer.py
visualizer/drivers/: base.py  courwise_ratings.py  fastest_finished.py  format_distribution.py  genre_distribution.py  genre_ratings.py  monthwise_count.py  ratings_curve.py  remaining_watching.py  status_distribution.py
